--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1,2 +1,314 @@
+html {
+  line-height: 1.15;
+}
 
+body {
+  margin: 0;
+}
+
+main {
+  display: block;
+}
+
+hr {
+  box-sizing: content-box;
+  height: 0;
+  overflow: visible;
+}
+
+a {
+  background-color: transparent;
+  color: inherit;
+}
+
+abbr[title] {
+  border-bottom: none;
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted;
+}
+
+b,
+strong {
+  font-weight: bolder;
+}
+
+code,
+kbd,
+samp {
+  font-family: "PT Sans", "Arial", sans-serif;
+}
+
+small {
+  font-size: 80%;
+}
+
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+img {
+  border-style: none;
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
+}
+
+button,
+input {
+  overflow: visible;
+}
+
+button,
+select {
+  text-transform: none;
+}
+
+button::-moz-focus-inner,
+[type=button]::-moz-focus-inner,
+[type=reset]::-moz-focus-inner,
+[type=submit]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+button:-moz-focusring,
+[type=button]:-moz-focusring,
+[type=reset]:-moz-focusring,
+[type=submit]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+legend {
+  box-sizing: border-box;
+  color: inherit;
+  display: table;
+  max-width: 100%;
+  padding: 0;
+  white-space: normal;
+}
+
+progress {
+  vertical-align: baseline;
+}
+
+textarea {
+  overflow: auto;
+}
+
+[type=checkbox],
+[type=radio] {
+  box-sizing: border-box;
+  padding: 0;
+}
+
+[type=number]::-webkit-inner-spin-button,
+[type=number]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+[type=search] {
+  outline-offset: -2px;
+}
+
+::-webkit-file-upload-button {
+  font: inherit;
+}
+
+details {
+  display: block;
+}
+
+summary {
+  display: list-item;
+}
+
+template {
+  display: none;
+}
+
+[hidden] {
+  display: none;
+}
+
+button:active,
+button:focus {
+  outline: none;
+}
+
+/* colors */
+/* vars */
+/* keyframes */
+@keyframes glowing {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+* {
+  box-sizing: border-box;
+}
+
+.page__body {
+  font-family: "Nunito", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+  background: url("../img/svg/bg.svg"), linear-gradient(174.2deg, rgb(255, 244, 228) 7.1%, rgb(240, 246, 238) 67.4%);
+  background-size: 280px auto, cover;
+  background-attachment: fixed;
+}
+
+.container {
+  height: 100%;
+  max-width: 1200px;
+  padding: 0 20px;
+}
+@media (min-width: 769px) and (max-width: 1200px) {
+  .container {
+    width: 100%;
+  }
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.wrapper {
+  background-color: #fbf8ec;
+  box-shadow: 10px 0 19px -17px #000000, -10px 0 19px -17px #000000;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+body,
+html {
+  height: 100%;
+  scroll-behavior: smooth;
+}
+
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: #000000;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.wrapper {
+  background-image: url("../img/bg.jpg");
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+  max-width: 1200px;
+  width: 100%;
+  position: relative;
+  z-index: 0;
+}
+
+.body {
+  font-family: "Montserrat", sans-serif;
+}
+
+.header {
+  padding: 20px 0 0 0;
+  width: 100%;
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.1);
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+  z-index: 0;
+}
+
+.nav-list {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.nav-list__burger {
+  width: 40px;
+  height: 40px;
+  background-image: url("../img/svg/burger.svg");
+  background-color: transparent;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  border: none;
+  padding: 0;
+}
+.nav-list__logo {
+  padding: 0 0 20px 0;
+}
+.nav-list__items {
+  list-style-type: none;
+  display: flex;
+  padding: 0;
+}
+.nav-list__item {
+  color: #FFF;
+  font-size: 18px;
+  margin: 0 28px 0 0;
+  font-weight: 900;
+}
+.nav-list__item:last-child {
+  margin: 0;
+}
+
+.hero {
+  overflow: visible;
+  position: relative;
+  z-index: 2;
+}
+
+.hero .container {
+  background-image: url(../img/svg/fiol-oblako.svg);
+  background-position: 163px 41px;
+  background-size: 287px auto;
+  background-repeat: no-repeat;
+  min-height: 300px;
+}
 /*# sourceMappingURL=style.css.map */
